syntax = "proto3";

package wener.wode.agent.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message InfoRequest {}

message InfoResponse {
  google.protobuf.Timestamp now = 1;
  google.protobuf.Timestamp started_at = 2;
  double uptime = 3;
  string timezone = 4;
  string locale = 5;
}

message ReloadRequest {
  string reason = 1;
}

message ReloadResponse {
  string message = 1;
}

service AgentService {
  rpc Info(InfoRequest) returns (InfoResponse);
  rpc Reload(ReloadRequest) returns (ReloadResponse);
}
